--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -2,7 +2,7 @@ name: Example workflow using Snyk
 on: push
 jobs:
   security:
-    runs-on: QIPDNS116
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
