--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -1,3 +1,4 @@
+
 name: Example workflow using Snyk
 on: push
 jobs:
@@ -6,5 +7,6 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
-        run: |
-            /opt/snyk/snyk test
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: 935108ec-6fcc-41cd-b8f9-14b342aea9fc
