--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -5,8 +5,6 @@ jobs:
   security:
     runs-on: QIPDNS116
     steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: 935108ec-6fcc-41cd-b8f9-14b342aea9fc
+    - name: test snyk
+      working-directory: /opt/snyk/
+      run: pwd
