--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -1,10 +1,11 @@
-
+ 
 name: Example workflow using Snyk
 on: push
 jobs:
   security:
     runs-on: self-hosted
     steps:
+    - uses: actions/checkout@master
     - name: test snyk
       working-directory: /opt/snyk/
       run: pwd
