--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -6,12 +6,5 @@ jobs:
     steps:
     - name: pull source
       working-directory: /opt/snyk
-      run: |
-        git fetch --all
-        git clean -fd
-        git clean -f -X
-        git checkout master
-        git reset --hard origin/master
-        git pull --rebase=false origin --prune --verbose
-        git status
+      run:
         pwd
